--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -10,13 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Make files accessible to actions
+      # https://github.com/actions/checkout#readme
+      - uses: actions/checkout@v2
+      # Install Node
       # https://github.com/actions/setup-node#readme
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+      # Install dependencies
       - run: npm ci
-      # make the authentication token accessible at
-      # process.env.GITHUB_TOKEN to the pr-comment.js script
+      # Run pr-comment.js with Node make the authentication token
+      # accessible at process.env.GITHUB_TOKEN
       - run: node .github/actions/pr-comment.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
