build(package): simplify repository fields
created using @octoherd and https://github.com/gr2m/octoherd-script-normalize-package-repository-field

--- a/package.json
+++ b/package.json
@@ -12,5 +12,6 @@
   "license": "MIT",
   "dependencies": {
     "@octokit/action": "^1.2.0"
-  }
+  },
+  "repository": "github:gr2m/create-pull-request-comment-action-example"
 }
