--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -1,27 +1,17 @@
 name: PR Comment
-on:
-  # Run this workflow only when a new pull request is opened
-  # compare: https://git.io/JvTyV
+"on":
   pull_request:
-    types: [opened]
-
+    types:
+      - opened
 jobs:
   pr_comment:
     runs-on: ubuntu-latest
-
     steps:
-      # Make files accessible to actions
-      # https://github.com/actions/checkout#readme
       - uses: actions/checkout@v2
-      # Install Node
-      # https://github.com/actions/setup-node#readme
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
-      # Install dependencies
+          node-version: lts/*
       - run: npm ci
-      # Run pr-comment.js with Node make the authentication token
-      # accessible at process.env.GITHUB_TOKEN
       - run: node .github/actions/pr-comment.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
